--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -1,6 +1,7 @@
 # coding: utf-8
 [metadata]
 name = GTL
+version = 0.0.1
 description = GENERATORE TIPOGRAFICO di LIBERTÀ
 long_description = file: README.md
 long_description_content_type = text/markdown
