--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -5,8 +5,9 @@ version = 0.0.1
 description = GENERATORE TIPOGRAFICO di LIBERTÀ
 long_description = file: README.md
 long_description_content_type = text/markdown
-author = Daniele Capo, Giovanni Abbatepaolo, Puria Nafisi Azizi
+author = Giovanni Abbatepaolo, Puria Nafisi Azizi, Daniele Capo
 author_email = puria@dyne.org
+py_modules = ['GTL']
 project_urls =
     Source Code = https://github.com/puria/GTL
     Scuola Open Source = https://lascuolaopensource.xyz
@@ -31,6 +32,7 @@ setup_requires =
     pytest-runner
 install_requires =
     fontParts==0.8.7
+
 tests_require =
     pytest
     pytest-cov
