🐒 Adding glyph transformation

--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -24,7 +24,6 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Topic :: Artistic Software
-    Topic :: Typography
 
 [options]
 packages = find:
@@ -33,6 +32,7 @@ setup_requires =
 install_requires =
     fontParts==0.8.7
     Click
+    numpy
 
 tests_require =
     pytest
